--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,8 +32,11 @@ dependencies:
     sdk: flutter
 
   flutter_svg: ^2.0.7
+  flutter_form_builder: ^10.0.1
+  form_builder_validators: ^11.1.2
   cupertino_icons: ^1.0.8
-
+  firebase_core: ^3.13.1
+  firebase_auth: ^5.5.4
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   
