--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_auth: ^5.5.4
   firebase_crashlytics: ^4.3.6
   firebase_analytics: ^11.4.6
+  firebase_performance: ^0.10.1+6
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   
