--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   firebase_crashlytics: ^4.3.6
   firebase_analytics: ^11.4.6
   firebase_performance: ^0.10.1+6
+  cloud_firestore: ^5.6.8
+  table_calendar: ^3.0.9
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
