--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   firebase_performance: ^0.10.1+6
   cloud_firestore: ^5.6.8
   table_calendar: ^3.0.9
-
+  url_launcher: ^6.2.5
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   
